# marble-bouncing

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Application.cpp  Application.h  Config.h  Time.cpp  Time.h
src/entities/: Ball.cpp  Ball.h  Container.cpp  Container.h
src/game/: BallManager.cpp  BallManager.h  GameState.cpp  GameState.h
src/math/: MathUtils.cpp  MathUtils.h  Vector2D.cpp  Vector2D.h
src/physics/: CollisionDetector.cpp  CollisionDetector.h  CollisionResolver.cpp  CollisionResolver.h  PhysicsEngine.cpp  PhysicsEngine.h  SpatialGrid.cpp  SpatialGrid.h
src/rendering/: CircleRenderer.cpp  CircleRenderer.h  CircleTextureCache.cpp  CircleTextureCache.h  Renderer.cpp  Renderer.h  TextRenderer.cpp  TextRenderer.h
src/ui/: Button.cpp  Button.h  Slider.cpp  Slider.h
